✨ feat: Implement simple storage get / set

--- a/public/popup/popup.html
+++ b/public/popup/popup.html
@@ -14,7 +14,7 @@
 
     <div id="content">
       <div class="center content-head light">지금까지 대신 눌러준 횟수</div>
-      <span class="center" id="count">0</span>
+      <span class="center" id="count">19</span>
 
       <div class="center calc-point">
         ≈ <span id="calculatedPoints">0</span> 포인트
@@ -24,5 +24,7 @@
     <footer class="center">
       <button id="historyButton" class="twitch-color-button">기록 보기</button>
     </footer>
+
+    <script src="../js/popup.js"></script>
   </body>
 </html>
