--- a/public/popup/popup.html
+++ b/public/popup/popup.html
@@ -22,7 +22,7 @@
     </div>
 
     <footer class="center">
-      <button id="historyButton" class="twitch-color-button">기록 보기</button>
+      <button id="recordsButton" class="twitch-color-button">기록 보기</button>
     </footer>
 
     <script src="../js/popup.js"></script>
