✨ feat: Implement simple record show

--- a/public/popup/records.html
+++ b/public/popup/records.html
@@ -10,7 +10,7 @@
       <img src="assets/back-button.png" alt="Back Button" id="backButton" />
     </header>
 
-    <h2 class="left">기록</h2>
+    <h1 class="left" id="recordHeaderText">기록</h1>
 
     <div id="recordsContainer"></div>
 
