✨ feat: Add calculated time

--- a/public/popup/popup.html
+++ b/public/popup/popup.html
@@ -17,7 +17,8 @@
       <span class="center" id="count">19</span>
 
       <div class="center calc-point">
-        ≈ <span id="calculatedPoints">0</span> 포인트
+        <span>= <span id="calculatedPoints">0</span>포인트</span>
+        <span id="calculatedTimeText"></span>
       </div>
     </div>
 
